--- a/taixinkanghu/src/main/AndroidManifest.xml
+++ b/taixinkanghu/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wjy.taixinkanghu" >
+    package="com.example.wjy.taixinkanghu">
 
     <!-- 用户权限 -->
 
@@ -16,18 +16,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.taixinkanghu.app.ui.Welcome"
-            android:label="@string/welcome_activity_name" >
+            android:name="com.taixinkanghu.app.ui.activity.WelcomeActivity"
+            android:label="@string/welcome_activity_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.taixinkanghu.app.ui.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:name="com.taixinkanghu.app.ui.activity.MainActivity"
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
@@ -36,9 +37,29 @@
         <service
             android:name="com.taixinkanghu.app.model.net.NetService"
             android:enabled="true"
-            android:exported="true" >
-        </service>
+            android:exported="true"></service>
 
+        <activity
+            android:name="com.taixinkanghu.app.ui.activity.AboutUsActivity"
+            android:label="AboutUsActivity"></activity>
+        <activity
+            android:name="com.taixinkanghu.app.ui.activity.ChooseWorkerActivity"
+            android:label="ChooseWorkerActivity"></activity>
+        <activity
+            android:name="com.taixinkanghu.app.ui.activity.CustomerServiceActivity"
+            android:label="CustomerServiceActivity"></activity>
+        <activity
+            android:name="com.taixinkanghu.app.ui.activity.SaleInfoActivity"
+            android:label="SaleInfoActivity"></activity>
+        <activity
+            android:name="com.taixinkanghu.app.ui.activity.WorkerInfoActivity"
+            android:label="WorkerInfoActivity"></activity>
+        <activity
+            android:name="com.taixinkanghu.app.ui.activity.AppointmentActivity"
+            android:label="AppointmentActivity"></activity>
+        <activity
+            android:name="com.taixinkanghu.app.ui.activity.OrderConfirmActivity"
+            android:label="OrderConfirmActivity"></activity>
     </application>
 
 </manifest>
