[modify]修改 主页面的资源文件

--- a/taixinkanghu/src/main/AndroidManifest.xml
+++ b/taixinkanghu/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.taixinkanghu.app.ui.activity.MainActivity"
+            android:name=".app.ui.main_page.MainActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
