[modify] 01. 添加公司展示信息。

--- a/taixinkanghu/src/main/AndroidManifest.xml
+++ b/taixinkanghu/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
             android:name=".app.ui.activity.CustomerServiceActivity"
             android:label="CustomerServiceActivity" />
         <activity
+            android:name=".app.ui.company_show.CompanyShowActivity"
+            android:label="CompanyShowActivity" />
+        <activity
             android:name=".app.ui.activity.SaleInfoActivity"
             android:label="SaleInfoActivity" />
         <activity
