--- a/taixinkanghu/src/main/AndroidManifest.xml
+++ b/taixinkanghu/src/main/AndroidManifest.xml
@@ -61,6 +61,13 @@
         <activity
             android:name=".app.ui.activity.AppointmentActivity"
             android:label="AppointmentActivity" />
+
+        <activity
+            android:name=".app.ui.select_nurse.SelectNurseActivity"
+            android:label="SelectNurseActivity" />
+
+
+
         <activity
             android:name=".app.ui.activity.OrderConfirmActivity"
             android:label="OrderConfirmActivity" />
