[modify] 01. 添加新的类NurseInfoActivity，护理员信息类。

--- a/taixinkanghu/src/main/AndroidManifest.xml
+++ b/taixinkanghu/src/main/AndroidManifest.xml
@@ -65,8 +65,9 @@
         <activity
             android:name=".app.ui.select_nurse.SelectNurseActivity"
             android:label="SelectNurseActivity" />
-
-
+        <activity
+            android:name=".app.ui.nurse_info.NurseInfoActivity"
+            android:label="NurseInfoActivity" />
 
         <activity
             android:name=".app.ui.activity.OrderConfirmActivity"
