--- a/taixinkanghu/build.gradle
+++ b/taixinkanghu/build.gradle
@@ -25,4 +25,5 @@ dependencies {
 	compile project(':EventBus')
 	compile project(':volley')
 	compile 'com.android.support:support-v4:22.2.0'
+	compile project(':sMSSDK')
 }
