--- a/sMSSDK/build.gradle
+++ b/sMSSDK/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 8
-    buildToolsVersion "19.1.0"
-
+    compileSdkVersion 22
+    buildToolsVersion '22.0.0'
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 17
+        minSdkVersion 16
+        targetSdkVersion 16
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    productFlavors {
     }
 }
 
