--- a/taixinkanghu/src/main/AndroidManifest.xml
+++ b/taixinkanghu/src/main/AndroidManifest.xml
@@ -9,8 +9,18 @@
     <!-- 下载列表 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- smsSDK权限-->
 
-    <!-- 屏幕适配 -->
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+	<!-- 屏幕适配 -->
     <!-- 程序入口 -->
     <application
         android:name=".app.frame.AppFrame"
@@ -35,10 +45,18 @@
             </intent-filter>
         </activity>
 
+        <!-- 网络消息处理-->
         <service
             android:name=".app.model.net.NetService"
             android:enabled="true"
             android:exported="true" />
+
+
+        <!-- 注册页面-->
+        <activity
+            android:name=".app.ui.register_page.RegisterActivity"
+            android:label="RegisterActivity" />
+
 
         <activity
             android:name=".app.ui.activity.AboutUsActivity"
