--- a/taixinkanghu/src/main/AndroidManifest.xml
+++ b/taixinkanghu/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
             android:label="NurseInfoActivity" />
 
         <activity
-            android:name=".app.ui.activity.OrderConfirmActivity"
+            android:name=".app.ui.nurs_order_confirm_page.OrderConfirmActivity"
             android:label="OrderConfirmActivity" />
         <activity
             android:name=".app.ui.activity.ReviewsActivity"
@@ -126,6 +126,12 @@
         <activity
             android:name=".app.ui.appointment_nursing.ApoitNursingActivity"
             android:label="@string/title_appoitment_nursing" />
+        <activity
+            android:name=".app.ui.appointment_nursing.SelectDateActivity"
+            android:label="@string/title_select_date" />
+        <activity
+            android:name=".app.ui.nurs_order_pay_page.NursOrderPayActivity"
+            android:label="@string/title_nurs_order_pay" />
     </application>
 
 </manifest>
