--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':volley', ':taixinkanghu', ':EventBus'
+include ':volley', ':taixinkanghu', ':EventBus', ':calendarview'
 include ':sMSSDK'
