--- a/taixinkanghu/build.gradle
+++ b/taixinkanghu/build.gradle
@@ -26,4 +26,5 @@ dependencies {
 	compile project(':volley')
 	compile 'com.android.support:support-v4:22.2.0'
 	compile project(':sMSSDK')
+	compile project(':calendarview')
 }
