--- a/gradle.properties
+++ b/gradle.properties
@@ -1,36 +1,35 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Thu Aug 20 15:04:59 GMT+08:00 2015
+POM_DEVELOPER_EMAIL=android@prolificinteractive.com
+POM_SCM_URL=https\://github.com/prolificinteractive/material-calendarview
+POM_DEVELOPER_ID=prolificinteractive
+POM_LICENCE_DIST=repo
+systemProp.http.proxyHost=127.0.0.1
+POM_ARTIFACT_ID=material-calendarview
+POM_DEVELOPER_NAME=Prolific Interactive
+POM_LICENCE_URL=http\://www.apache.org/licenses/LICENSE-2.0.txt
 org.gradle.parallel=true
-GROUP=com.prolificinteractive
+POM_DESCRIPTION=A Material design back port of Android's CalendarView
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_NAME=Material CalendarView
+POM_PACKAGING=aar
 VERSION_NAME=0.7.0
 VERSION_CODE=7
-
-POM_PACKAGING=aar
-POM_NAME=Material CalendarView
-POM_ARTIFACT_ID=material-calendarview
-POM_URL=https://github.com/prolificinteractive/material-calendarview
-POM_DESCRIPTION=A Material design back port of Android's CalendarView
-POM_SCM_URL=https://github.com/prolificinteractive/material-calendarview
-POM_SCM_CONNECTION=scm:git@github.com:prolificinteractive/material-calendarview.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:prolificinteractive/material-calendarview.git
-POM_LICENCE_NAME=The Apache Software License, Version 2.0
-POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=prolificinteractive
-POM_DEVELOPER_NAME=Prolific Interactive
-POM_DEVELOPER_EMAIL=android@prolificinteractive.com
+POM_SCM_DEV_CONNECTION=scm\:git@github.com\:prolificinteractive/material-calendarview.git
+POM_URL=https\://github.com/prolificinteractive/material-calendarview
+POM_SCM_CONNECTION=scm\:git@github.com\:prolificinteractive/material-calendarview.git
+GROUP=com.prolificinteractive
+systemProp.http.proxyPort=1080
