--- a/taixinkanghu/build.gradle
+++ b/taixinkanghu/build.gradle
@@ -31,4 +31,5 @@ dependencies {
 	compile 'com.android.support:support-v4:22.2.0'
 	compile project(':sMSSDK')
 	compile project(':calendarview')
+	compile files('libs/alipaySDK-20150724.jar')
 }
